1998-02-01  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Colormap.m ([Colormap -setColor:ToName:]): Remove cast
	to Color for assignment to map[].
	([Colormap -pixelValue:]): Remove cast to PixelValue for white.

1998-01-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* TkExtra.m ([TkExtra -preInitWithArgc:argv:]): In 8.0-unoff, 
	don't import everything, just the BLT features we really need.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* InputWidget.[hm]: New method linkVariableInt:.

	* tkobjc.m (initTkObjc): Remove assignment to Colormap.

	* tkobjc.h: Include tkobjc/Graph.h instead of tkobjc/BLTGraph.h
	and tkobjc/Colormap.h instead of tkobjc/XColormap.h.

	* internal.m: New functions tkobjc_createEventHandler and
	tkobjc_deleteEventHandler.

	* internal.h: Include X11/Xlib.h for XColormap and X11/Xutil.h for
	ZoomRaster.  Include objc/objc.h.  Declare new functions
	tkobjc_createEventHandler and tkobjc_deleteEventHandler.

	* ZoomRaster.m: Reformatting throughout.

	* Widget.m ([Widget -createEnd]): Use getObjectName instead of
	tclObjc_objectToName.  Reformatting throughout.

	* SimpleProbeDisplayHideButton.m ([SimpleProbeDisplayHideButton
	-createEnd]): Use getObjectName instead of tclObjc_objectToName.

	* NodeItem.m:  Don't include string.h, stdio.h, or stdlib.h.
	([NodeItem -createBindings]): Store widget name and object
	name in variables and use those.  Reformatting throughout.

	* Makefile (OBJECTS, HEADERS): Change BLTGraph to Graph, and
	XColormap to Colormap.
	(Graph.o): Renamed from BLTGraph.o.
	(Colormap.o): Renamed from Colormap.o.

	* CanvasItem.m: Don't include string.h, stdio.h, or stdlib.h.
	([CanvasItem -createBindings]): Use getObjectName instead of
	tclObjc_objectToName.  Reformatting throughout.

	* Canvas.m: Don't include string.h, stdio.h, or stdlib.h.

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-setWindowGeometryRecordName:]): Include internal.h.